--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <div data-role="panel" id="sidebar-left" data-position="left" data-display="push" data-theme="b">
     <div class="ui-panel-inner">
-        <img src="/images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
+        <img src="images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
         <ul data-role="listview" class="ui-nodisc-icon" data-inset="false">
             <li class="iconLeft" data-icon="home"><a href="#page1" class="show-page-loading-msg">Ana Sayfa</a></li>
             <li class="iconLeft" data-icon="user"><a href="#page2" class="show-page-loading-msg">Özgeçmiş</a></li>
@@ -138,7 +138,7 @@
 
    <div data-role="panel" id="sidebar-left" data-position="left" data-display="push" data-theme="b">
     <div class="ui-panel-inner">
-        <img src="/images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
+        <img src="images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
            <ul data-role="listview" class="ui-nodisc-icon" data-inset="false">
             <li class="iconLeft" data-icon="home"><a href="#page1" class="show-page-loading-msg">Ana Sayfa</a></li>
             <li class="iconLeft" data-icon="user"><a href="#page2" class="show-page-loading-msg">Özgeçmiş</a></li>
@@ -260,7 +260,7 @@
 
     <div data-role="panel" id="sidebar-left" data-position="left" data-display="push" data-theme="b">
     <div class="ui-panel-inner">
-        <img src="/images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
+        <img src="images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
            <ul data-role="listview" class="ui-nodisc-icon" data-inset="false">
             <li class="iconLeft" data-icon="home"><a href="#page1" class="show-page-loading-msg">Ana Sayfa</a></li>
             <li class="iconLeft" data-icon="user"><a href="#page2" class="show-page-loading-msg">Özgeçmiş</a></li>
@@ -320,7 +320,7 @@
 
    <div data-role="panel" id="sidebar-left" data-position="left" data-display="push" data-theme="b">
     <div class="ui-panel-inner">
-        <img src="/images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
+        <img src="images/logo.png" alt="Bahri.Info" height="50" style="margin-bottom:20px; margin-left: 30px;" />
            <ul data-role="listview" class="ui-nodisc-icon" data-inset="false">
             <li class="iconLeft" data-icon="home"><a href="#page1" class="show-page-loading-msg">Ana Sayfa</a></li>
             <li class="iconLeft" data-icon="user"><a href="#page2" class="show-page-loading-msg">Özgeçmiş</a></li>
